--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
-    <body>
+    <body style="text-align: center">
         <h1>Taller GIT</h1>
         <h2>Proyecto CALCULADORA</h2>        
    
@@ -19,6 +19,9 @@ Segundo Numero:<br>
 <input type="number" name="SegundoNum">
 </form>       
         
+        <h3>
+            Elegir Operacion
+        </h3>
         
         <select name="Calcular">
 
